<resources>
    <string name="app_name">PhoneHelper</string>
    <string name="call">Make a call</string>
    <string name="calendar">Show Calendar, Set Reminder</string>
    <string name="browser">Open a browser</string>
    <string name="address">Manage address book</string>
    <string name="location">Show my location, take me somewhere</string>
    <string name="sms">Send-read SMS messages</string>
    <string name="newSms">Compose SMS</string>
    <string name="readSms">Show my SMS messages</string>
    <string name="showLoc">Show my location on Map</string>
    <string name="gotoLoc">Go somewhere</string>
    <string name="addReminder">Add a reminder</string>
    <string name="reminderHint">add a note</string>
    <string name="read">Read</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="destHint">Enter your destination</string>
    <string name="speakSms">Speak SMS</string>
    <string name="send">Send</string>
    <string name="speech_prompt">Say the message you want to send</string>
    <string name="speech_not_supported">Sorry, speech to text is not supported on you phone.</string>

<!-- TODO: Remove or change this placeholder text -->

    <string name="title_activity_my_location">Map</string>
    <string name="pick_contact">Pick a contact</string>
</resources>
