<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="6"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/call"
        android:id="@+id/callBtn"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:typeface="normal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/calendar"
        android:id="@+id/calBtn"
        android:layout_below="@+id/callBtn"
        android:layout_alignParentEnd="true"
        android:textSize="22sp"
        android:typeface="normal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/browser"
        android:id="@+id/browserBtn"
        android:layout_above="@+id/addrBtn"
        android:layout_alignParentEnd="true"
        android:textSize="22sp"
        android:typeface="normal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/address"
        android:id="@+id/addrBtn"
        android:layout_above="@+id/locBtn"
        android:layout_alignParentStart="true"
        android:textSize="22sp"
        android:typeface="normal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/location"
        android:id="@+id/locBtn"
        android:layout_above="@+id/smsBtn"
        android:layout_alignParentStart="true"
        android:textSize="22sp"
        android:typeface="normal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/sms"
        android:id="@+id/smsBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:typeface="normal" />
</LinearLayout>
